fix: add api group for swag docs
