# docs/swagger.yaml
@@ -59,6 +59,157 @@ info:
     url: https://socialnetwork.com
   title: SocialNetwork API
 paths:
+  /api/users:
+    get:
+      description: Get list of all users
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.User'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+      summary: Get all users
+      tags:
+      - Users
+    post:
+      description: Create new user and add to database
+      parameters:
+      - description: new user data
+        in: body
+        name: request_body
+        required: true
+        schema:
+          $ref: '#/definitions/controller.CreateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/controller.CommonResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+      summary: Create user
+      tags:
+      - Users
+  /api/users/{id}:
+    delete:
+      description: Delete user's data by ID
+      parameters:
+      - description: user id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.CommonResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+      summary: Delete user by ID
+      tags:
+      - Users
+    get:
+      description: Get user's data by ID
+      parameters:
+      - description: user id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+      summary: Get user by ID
+      tags:
+      - Users
+    put:
+      description: Update user's data by ID
+      parameters:
+      - description: user id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: updated user data
+        in: body
+        name: request_body
+        required: true
+        schema:
+          $ref: '#/definitions/controller.CreateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.CommonResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+      summary: Update user by ID
+      tags:
+      - Users
   /auth/refresh:
     get:
       description: Refresh token pairs
@@ -167,155 +318,4 @@ paths:
       summary: Health-check
       tags:
       - Ping
-  /users:
-    get:
-      description: Get list of all users
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.User'
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/controller.CommonError'
-      summary: Get all users
-      tags:
-      - Users
-    post:
-      description: Create new user and add to database
-      parameters:
-      - description: new user data
-        in: body
-        name: request_body
-        required: true
-        schema:
-          $ref: '#/definitions/controller.CreateUserRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/controller.CommonResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/controller.CommonError'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/controller.CommonError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/controller.CommonError'
-      summary: Create user
-      tags:
-      - Users
-  /users/{id}:
-    delete:
-      description: Delete user's data by ID
-      parameters:
-      - description: user id
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/controller.CommonResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/controller.CommonError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/controller.CommonError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/controller.CommonError'
-      summary: Delete user by ID
-      tags:
-      - Users
-    get:
-      description: Get user's data by ID
-      parameters:
-      - description: user id
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.User'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/controller.CommonError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/controller.CommonError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/controller.CommonError'
-      summary: Get user by ID
-      tags:
-      - Users
-    put:
-      description: Update user's data by ID
-      parameters:
-      - description: user id
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: updated user data
-        in: body
-        name: request_body
-        required: true
-        schema:
-          $ref: '#/definitions/controller.CreateUserRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/controller.CommonResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/controller.CommonError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/controller.CommonError'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/controller.CommonError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/controller.CommonError'
-      summary: Update user by ID
-      tags:
-      - Users
 swagger: "2.0"
